--- a/templates/me.html
+++ b/templates/me.html
@@ -1,3 +1,22 @@
-<header>
-	Me
-</header>
+<section class="MeContainer">
+
+	<section class="MeContainer-Article">
+		<h2>About me</h2>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente unde ullam praesentium ab tenetur, sit error tempore consectetur odio. Autem culpa similique ea voluptate magnam. Possimus, molestiae enim. Voluptates, officiis!</p>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente unde ullam praesentium ab tenetur, sit error tempore consectetur odio. Autem culpa similique ea voluptate magnam. Possimus, molestiae enim. Voluptates, officiis!</p>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente unde ullam praesentium ab tenetur, sit error tempore consectetur odio. Autem culpa similique ea voluptate magnam. Possimus, molestiae enim. Voluptates, officiis!</p>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente unde ullam praesentium ab tenetur, sit error tempore consectetur odio. Autem culpa similique ea voluptate magnam. Possimus, molestiae enim. Voluptates, officiis!</p>
+	</section>
+	<section class="MeContainer-Info">
+		<div class="MeContainer-Info-Image">
+			<img src="images/foto.jpg" alt="" class="MeContainer-Info-ImageContainer" height="230" width="230">
+		</div>
+		<div class="MeContainer-Info-Data">
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente unde ullam praesentium ab tenetur, sit error tempore consectetur odio. Autem culpa similique ea voluptate magnam. Possimus, molestiae enim. Voluptates, officiis!</p>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente unde ullam praesentium ab tenetur, sit error tempore consectetur odio. Autem culpa similique ea voluptate magnam. Possimus, molestiae enim. Voluptates, officiis!</p>
+		</div>
+		
+	</section>
+	
+
+</section>
