Commit 6. Terminada la estructura y añadido contenido a la página personal.

--- a/templates/me.html
+++ b/templates/me.html
@@ -1,22 +1,40 @@
 <section class="MeContainer">
 
 	<section class="MeContainer-Article">
-		<h2>About me</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente unde ullam praesentium ab tenetur, sit error tempore consectetur odio. Autem culpa similique ea voluptate magnam. Possimus, molestiae enim. Voluptates, officiis!</p>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente unde ullam praesentium ab tenetur, sit error tempore consectetur odio. Autem culpa similique ea voluptate magnam. Possimus, molestiae enim. Voluptates, officiis!</p>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente unde ullam praesentium ab tenetur, sit error tempore consectetur odio. Autem culpa similique ea voluptate magnam. Possimus, molestiae enim. Voluptates, officiis!</p>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente unde ullam praesentium ab tenetur, sit error tempore consectetur odio. Autem culpa similique ea voluptate magnam. Possimus, molestiae enim. Voluptates, officiis!</p>
+		<article class="MeContainer-Article-Me">
+			<h2>Acerca de mi</h2>
+			<p>Bienvenidos a mi portfolio en donde podréis saber un poco acerca de mi y mis conocimientos de desarrollo web. Me llamo Diego Losada Regos, soy Ingeniero técnico de Imagen y Sonido por la Universidad de Vigo y máster en Seguridad de las TIC en la especialidad de aplicaciones y servicios por la Universidad Oberta de Cataluña.</p>
+			<p>A lo largo de las dos titulaciones he focalizado mi apredizaje autónomo al desarrollo web en la parte del servidor y bases de datos (<i>Back-end</i>), intentando aprender diversidad de tecnologías que me proporcionen diferentes soluciones ante un mismo trabajo. Como podréis ver en el apartado de proyectos de esta página, he utilizado tecnologías completamente diferentes en el servidor debido a las necesidades y comodidad de desarrollo en cada una.</p>
+			<p>Con respecto a la seguridad, el MISTIC me ha dado los conocimientos necesarios para desarrollar aplicaciones web seguras, profundizando en el conocimiento de vulnerabilidades y cómo subsanarlas o evitarlas.</p>
+			<p>También tengo experiencia en tecnologías del <i>Front-end</i>, como por ejemplo esta misma página o la parte respectiva en ambos proyectos. A lo largo de las dos titulaciones también he desarrollado aplicaciones en JAVA y C++.</p>
+			<p>Con respecto a mi <i>Workflow</i> utilizo Git como sistema de control de versiones, Github en proyectos públicos y Bitbuckect para proyectos privados.</p>
+		</article>
+		<aside class="MeContainer-Article-Aside">	
+			<button class="MeContainer-Article-Button twitter" type="button">
+				<span class="icon-twitter"></span>
+			</button>
+			<button class="MeContainer-Article-Button github" type="button">
+				<span class="icon-github"></span>
+			</button>
+		</aside>
 	</section>
+
 	<section class="MeContainer-Info">
 		<div class="MeContainer-Info-Image">
-			<img src="images/foto.jpg" alt="" class="MeContainer-Info-ImageContainer" height="230" width="230">
+			<img src="images/foto.jpg" alt="" class="MeContainer-Info-ImageContainer" height="230" width="230">	
 		</div>
 		<div class="MeContainer-Info-Data">
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente unde ullam praesentium ab tenetur, sit error tempore consectetur odio. Autem culpa similique ea voluptate magnam. Possimus, molestiae enim. Voluptates, officiis!</p>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente unde ullam praesentium ab tenetur, sit error tempore consectetur odio. Autem culpa similique ea voluptate magnam. Possimus, molestiae enim. Voluptates, officiis!</p>
+			<p>Nombre y apellidos</p>
+			<p class="MeContainer-Info-P">Diego Losada Regos</p>
+			<p>Trabajo</p>
+			<p class="MeContainer-Info-P">Desarrollador <i>Back-end</i> de código seguro</p>
+			<p>Nacimiento</p>
+			<p class="MeContainer-Info-P">21/06/1990</p>
+			<p>Dirección</p>
+			<p class="MeContainer-Info-P">Touro, A Coruña, España</p>
 		</div>
-		
 	</section>
 	
-
 </section>
+
+
