--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,5 @@
 html {
-	font-size: 16px;
+	font-size: 14px;
 }
 
 body{
@@ -15,6 +15,13 @@ p{
 	display:block;
 }
 
+button{
+	outline: 0;
+}
+
+h2{
+	display: inline-block;
+}
 
 /*Nav clases*/
 .NavContainer{
@@ -58,10 +65,6 @@ p{
 	margin: 0;
 }
 
-.NavContainer-Button:focus{
-	outline: 0;
-}
-
 /*Provisional*/
 /*.NavContainer-Text{
 	border:none;
@@ -97,13 +100,48 @@ p{
 	display:flex;
 	flex-direction:row;
 	color:white;
-	margin:5%;
+	margin:2% 5% 5% 5%;
 	justify-content:space-around;
 }
 
 .MeContainer-Article{
 	flex:1;
+	display:flex;
+	flex-direction:column;
 	padding:1em;
+}
+
+.MeContainer-Article-Me{
+	text-align: justify;
+}
+
+.MeContainer-Article-Aside{
+	margin-top: 2em;
+	text-align: center;
+	display: inline-block;
+}
+.MeContainer-Article-Button{
+	-webkit-border-radius: 50%;
+	-moz-border-radius: 50%;
+	border-radius: 50%;
+	text-align: center;
+	font-size: 3em;
+	border:none;
+	height: 2em;
+	width: 2em;
+	background: white;
+	padding: .5em;
+	margin-right: 1em;
+	margin-left: 1em;
+}
+
+
+.twitter{
+	color:#3cf;
+}
+
+.github{
+	color:black;
 }
 
 .MeContainer-Info{
@@ -114,7 +152,7 @@ p{
 }
 
 .MeContainer-Info-Image{
-	flex:1;
+	/*margin-left: 2em;*/
 	text-align: center;
 }
 
@@ -123,7 +161,18 @@ p{
 	border-radius: 50%;
 }
 .MeContainer-Info-Data{
-	flex:1;
+	/*margin-left: 2em;*/
+	text-align: justify;
+}
+
+.MeContainer-Info-P{
+	margin-top: .15em;
+	margin-bottom: .5em;
+	margin-right: 0;
+	background: white;
+	color:black;
+	width: 100%;
+	padding:.25em 1em .25em 1em;
 }
 
 /*CSS Studies Page*/
@@ -154,11 +203,11 @@ p{
 
 @font-face {
 	font-family: 'icomoon';
-	src:url('../fonts/icomoon.eot?a9za75');
-	src:url('../fonts/icomoon.eot?#iefixa9za75') format('embedded-opentype'),
-		url('../fonts/icomoon.ttf?a9za75') format('truetype'),
-		url('../fonts/icomoon.woff?a9za75') format('woff'),
-		url('../fonts/icomoon.svg?a9za75#icomoon') format('svg');
+	src:url('../fonts/icomoon.eot?qnq1sy');
+	src:url('../fonts/icomoon.eot?qnq1sy#iefix') format('embedded-opentype'),
+		url('../fonts/icomoon.ttf?qnq1sy') format('truetype'),
+		url('../fonts/icomoon.woff?qnq1sy') format('woff'),
+		url('../fonts/icomoon.svg?qnq1sy#icomoon') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -177,15 +226,21 @@ p{
 	-moz-osx-font-smoothing: grayscale;
 }
 
+.icon-twitter:before {
+	content: "\e800";
+}
+.icon-github:before {
+	content: "\e801";
+}
 .icon-user:before {
-	content: "\e600";
+	content: "\e802";
 }
 .icon-mail:before {
-	content: "\e601";
+	content: "\e803";
 }
 .icon-study:before {
-	content: "\e602";
+	content: "\e804";
 }
 .icon-wallet:before {
-	content: "\e603";
+	content: "\e805";
 }
