Commit 7. Añadido el estilo de la navegación de la página studies. Modificación de contenido de la página Me.

--- a/templates/me.html
+++ b/templates/me.html
@@ -10,10 +10,10 @@
 			<p>Con respecto a mi <i>Workflow</i> utilizo Git como sistema de control de versiones, Github en proyectos públicos y Bitbuckect para proyectos privados.</p>
 		</article>
 		<aside class="MeContainer-Article-Aside">	
-			<button class="MeContainer-Article-Button twitter" type="button">
+			<button class="MeContainer-Article-Button twitter" type="button" id="twitter">
 				<span class="icon-twitter"></span>
 			</button>
-			<button class="MeContainer-Article-Button github" type="button">
+			<button class="MeContainer-Article-Button github" type="button" id="github">
 				<span class="icon-github"></span>
 			</button>
 		</aside>
@@ -37,4 +37,5 @@
 	
 </section>
 
+<script src="js/me.js"></script>
 
