--- a/templates/studies.html
+++ b/templates/studies.html
@@ -1,1 +1,8 @@
-<header>Studies</header>
+<nav class="StudiesContainer-Nav">
+	<button class="StudiesNavButton StudiesNavButton__NoActive" type="button" data-button="experience__Left">Experiencia laboral</button>
+	<button class="StudiesNavButton StudiesNavButton__RightActiveMidNoActive" type="button" data-button="self-Study__Mid">Aprendizaje autónomo</button>
+	<button class="StudiesNavButton StudiesNavButton__RightActive" type="button" data-button="titles__Right">Títulos, cursos e idiomas</button>
+</nav>
+<section class="StudiesContainer-Content"></section>
+
+<script src="js/studies.js"></script>
