--- a/styles/style.css
+++ b/styles/style.css
@@ -3,7 +3,7 @@ html {
 }
 
 body{
-	background: black;
+	background: #A4BEDE;
 }
 
 ul{
@@ -30,7 +30,7 @@ h2{
 	bottom: 5%;
 	left:5%;
 	width: 10%;
-	background: black;
+	background: #A4BEDE;
 	font-size: 1.5em;
 }
 
@@ -49,11 +49,14 @@ h2{
 }
 
 .NavContainer-Button__active{
-	background:#FF9C00;
+/*	background:#FF9C00;
+*/
+	background: white;
 }
 
 .NavContainer-Button__noActive{
-	background: white;
+	/*background: white;*/
+	background: #91D3DE;
 }
 
 .NavContainer-Button{
@@ -84,7 +87,8 @@ h2{
 	top:5%;
 	right: 5%;
 	min-height: 90%;
-	background: #FF9C00;
+	/*background: #FF9C00;*/
+	background: white;
 	-webkit-border-radius: 0 15px 15px 0;
 	-moz-border-radius: 0 15px 15px 0;
 	border-radius: 0 15px 15px 0;
@@ -99,7 +103,7 @@ h2{
 	display: -webkit-flex;
 	display:flex;
 	flex-direction:row;
-	color:white;
+	color:black;
 	margin:2% 5% 5% 5%;
 	justify-content:space-around;
 }
@@ -146,13 +150,16 @@ h2{
 
 .MeContainer-Info{
 	flex:1;
+	display: -webkit-box;
+	display: -moz-box;
+	display: -ms-flexbox;
+	display: -webkit-flex;
 	display:flex;
 	flex-direction:column;
 	padding: 1em;
 }
 
 .MeContainer-Info-Image{
-	/*margin-left: 2em;*/
 	text-align: center;
 }
 
@@ -161,7 +168,6 @@ h2{
 	border-radius: 50%;
 }
 .MeContainer-Info-Data{
-	/*margin-left: 2em;*/
 	text-align: justify;
 }
 
@@ -169,24 +175,127 @@ h2{
 	margin-top: .15em;
 	margin-bottom: .5em;
 	margin-right: 0;
-	background: white;
-	color:black;
+	background: #A4BEDE;
+	color:white;
 	width: 100%;
 	padding:.25em 1em .25em 1em;
 }
 
 /*CSS Studies Page*/
-.StudiesContainer{
-	display:inline-block;
-	color:white;
-	background: none;
-	margin:5%;
+/*.StudiesContainer{
+	color:black;
+	margin:5% 5% 5% 5%;
+}*/
+
+.StudiesContainer-Nav{
+	position: absolute;
+	right: 5%;
+	bottom: 80%;
+}
+.StudiesNavButton{
+	position:relative;
+	font-size: 1em;
+	border-style: solid;
+	border-color: #A4BEDE;
+	border-width: .5em;
+	background: white;
+	color:black;
+	padding: 1.5em 2.5em;
+	margin:0;
+}
+
+.StudiesNavButton:first-child{
+	right: -1em;
+}
+
+.StudiesNavButton:last-child{
+	left: -1em;
+}
+
+.StudiesNavButton__NoActive{
+	border-top: none;
+	border-right: none;
+	border-left:none;
+}
+
+.StudiesNavButton__LeftActive{
+	border-bottom: none;
+	-webkit-border-radius: 15px 15px 0 0;
+	-moz-border-radius: 15px 15px 0 0;
+	border-radius: 15px 15px 0 0;
+	z-index: 2;
+}
+
+.StudiesNavButton__LeftActiveMidNoActive{
+	border-top: none;
+	border-right: none;
+	border-left:none;
+	-webkit-border-radius: 0 0 0 15px;
+	-moz-border-radius: 0 0 0 15px;
+	border-radius: 0 0 0 15px;
+}
+
+.StudiesNavButton__MidActive{
+	border-bottom: none;
+	-webkit-border-radius: 15px 15px 0 0;
+	-moz-border-radius: 15px 15px 0 0;
+	border-radius: 15px 15px 0 0;
+	z-index: 2;
+}
+
+.StudiesNavButton__MidActiveLeftNoActive{
+	border-top: none;
+	border-right: none;
+	border-left:none;
+	-webkit-border-radius: 0 0 15px 0;
+	-moz-border-radius: 0 0 15px 0;
+	border-radius: 0 0 15px 0;
+}
+
+.StudiesNavButton__MidActiveRightNoActive{
+	border-top: none;
+	border-right: none;
+	border-left:none;
+	-webkit-border-radius: 0 0 0 15px;
+	-moz-border-radius: 0 0 0 15px;
+	border-radius: 0 0 0 15px;
+}
+
+.StudiesNavButton__RightActive{
+	border-bottom: none;
+	-webkit-border-radius: 15px 15px 0 0;
+	-moz-border-radius: 15px 15px 0 0;
+	border-radius: 15px 15px 0 0;
+	z-index: 2;
+}
+
+.StudiesNavButton__RightActiveMidNoActive{
+	border-top: none;
+	border-right: none;
+	border-left:none;
+	-webkit-border-radius: 0 0 15px 0;
+	-moz-border-radius: 0 0 15px 0;
+	border-radius: 0 0 15px 0;
+}
+
+.StudiesContainer-Content{
+	color:black;
+	margin:5% 5% 5% 5%;
+	position: absolute;
+	top:20%;
+	display: -webkit-box;
+	display: -moz-box;
+	display: -ms-flexbox;
+	display: -webkit-flex;
+	display:flex;
+	flex-direction:row;
+	justify-content:space-around;
 }
 
 /*CSS Portfolio Page*/
 .PortfolioContainer{
 	display:inline-block;
-	color:white;
+	color:black;
 	background: none;
 	margin:5%;
 }
@@ -194,7 +303,7 @@ h2{
 /*CSS Contact Page*/
 .ContactContainer{
 	display:inline-block;
-	color:white;
+	color:black;
 	background: none;
 	margin:5%;
 }
