--- a/styles/style.css
+++ b/styles/style.css
@@ -35,7 +35,7 @@ h2{
 }
 
 .NavContainer-Button-First{
-	background: #FF9C00;
+	background: #A4BEDE;
 	-webkit-border-radius: 15px 0 0 0;
 	-moz-border-radius: 15px 0 0 0;
 	border-radius: 15px 0 0 0;
@@ -190,7 +190,7 @@ h2{
 .StudiesContainer-Nav{
 	position: absolute;
 	right: 5%;
-	bottom: 80%;
+	top: 5%;
 }
 .StudiesNavButton{
 	position:relative;
@@ -280,18 +280,64 @@ h2{
 
 .StudiesContainer-Content{
 	color:black;
-	margin:5% 5% 5% 5%;
-	position: absolute;
-	top:20%;
+	margin:15% 5% 5% 5%;
 	display: -webkit-box;
 	display: -moz-box;
 	display: -ms-flexbox;
 	display: -webkit-flex;
 	display:flex;
-	flex-direction:row;
-	justify-content:space-around;
+	flex-direction:column;
+	
 }
 
+.StudiesContainer-Item{
+	height: 100%;
+	flex:1;
+}
+
+.StudiesContainer-Item-Header{
+	margin-top: 1em;
+	margin-bottom: 0;
+}
+
+.StudiesContainer-Item-Content__active{
+	display:flex;
+	margin: 2em;
+}
+
+.StudiesContainer-Item-Content{
+	flex:1;
+	margin-left: 3em;
+	margin-right: 3em;
+	margin-top: 0;
+	margin-bottom: 1em;
+	height: 20%;
+	width: 25%;
+	text-align: center;
+}
+
+.StudiesContainer-Item-p{
+	margin-top: 1em;
+}
+
+.StudiesContainer-Item-image{
+	margin: 1em;
+}
+
+.StudiesContainer-Item-Content__noActive{
+	display:none;
+}
+.StudiesContainer-Item-Footer{
+	border-bottom: dotted #A4BEDE .5em;
+	width: 100%;
+}
+
+.StudiesContainer-ButtonDown{
+	margin-left:95%;
+	border: none;
+	background: none;
+	font-size: 2em;
+}
 /*CSS Portfolio Page*/
 .PortfolioContainer{
 	display:inline-block;
@@ -312,11 +358,11 @@ h2{
 
 @font-face {
 	font-family: 'icomoon';
-	src:url('../fonts/icomoon.eot?qnq1sy');
-	src:url('../fonts/icomoon.eot?qnq1sy#iefix') format('embedded-opentype'),
-		url('../fonts/icomoon.ttf?qnq1sy') format('truetype'),
-		url('../fonts/icomoon.woff?qnq1sy') format('woff'),
-		url('../fonts/icomoon.svg?qnq1sy#icomoon') format('svg');
+	src:url('../fonts/icomoon.eot?fcz57o');
+	src:url('../fonts/icomoon.eot?fcz57o#iefix') format('embedded-opentype'),
+		url('../fonts/icomoon.ttf?fcz57o') format('truetype'),
+		url('../fonts/icomoon.woff?fcz57o') format('woff'),
+		url('../fonts/icomoon.svg?fcz57o#icomoon') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -335,11 +381,20 @@ h2{
 	-moz-osx-font-smoothing: grayscale;
 }
 
+.icon-circle-up:before {
+	content: "\e801";
+}
+.icon-circle-down:before {
+	content: "\e806";
+}
+.icon-paragraph-justify:before {
+	content: "\e807";
+}
 .icon-twitter:before {
 	content: "\e800";
 }
 .icon-github:before {
-	content: "\e801";
+	content: "\e808";
 }
 .icon-user:before {
 	content: "\e802";
