Commit 9. Todo el contenido añadido a la página de estudios.

--- a/templates/studies/degrees.html
+++ b/templates/studies/degrees.html
@@ -1,17 +1,17 @@
 <section class="StudieContainer-Item">
 	<h2 class="StudiesContainer-Item-Header">Titulaciones</h2>
 	<div class="StudiesContainer-Item-Content__noActive" id="degrees">
-		<div class="StudiesContainer-Item-Content">
-			<img src="images/logo-uvigo.png" class="StudiesContainer-Item-image" alt="" height="100" width="100">
-			<img src="images/logo-teleco.png" alt="" class="StudiesContainer-Item-image" height="100" width="100">
+		<section class="StudiesContainer-Item-Content__degrees">
+			<img src="images/logo-uvigo.png" class="StudiesContainer-Item-image" alt="" width="100" height="100">
+			<img src="images/logo-teleco.png" alt="" class="StudiesContainer-Item-image" width="100" height="100">
 			<p class="StudiesContainer-Item-p">Ingeniero Ténico de Telecomunicaciones, especialidad en Imagen y sonido (2008-2014)</p>
-		</div>
+		</section>
 
-		<div class="StudiesContainer-Item-Content">
-			<img src="images/logo-uoc.jpg" class="StudiesContainer-Item-image" alt="" height="100" width="100">
-			<img src="images/logo-mistic.png" class="StudiesContainer-Item-image" alt="" height="100" width="100">
-			<p class="StudiesContainer-Item-p">Máster en Seguridad de las TIC, especialidad aplicaciones y servicios (2014-2015)</p>
-		</div>
+		<section class="StudiesContainer-Item-Content__degrees">
+			<img src="images/logo-uoc.png" class="StudiesContainer-Item-image" alt="" width="100" height="100">
+			<img src="images/logo-mistic.png" class="StudiesContainer-Item-image" alt="" width="100" height="100">
+			<p class="StudiesContainer-Item-p">Máster en Seguridad de las TIC, especialidad en aplicaciones y servicios (2014-2015)</p>
+		</section>
 		
 	</div>
 	<div class="StudiesContainer-Item-Footer">
@@ -20,8 +20,28 @@
 </section>
 <section class="StudieContainer-Item">
 	<h2 class="StudiesContainer-Item-Header">Cursos</h2>
-	<div class="StudiesContainer-Item-Content StudiesContainer-Item-Content__noActive" id="courses">
-		<article class="StudiesContainer-Item-Content">Hola</article>	
+	<div class="StudiesContainer-Item-Content__noActive" id="courses">
+		<section class="StudiesContainer-Item-Content__courses">
+			<img src="images/logo-java.png" class="StudiesContainer-Item-image" alt="" width="75" height="100">
+			<p class="StudiesContainer-Item-p">Curso de formación en Java: Programación orientada a objetos para ingenieros (Uvigo 2012)</p>
+		</section>
+		<section class="StudiesContainer-Item-Content__courses">
+			<img src="images/logo-android.png" class="StudiesContainer-Item-image" alt="" width="175" height="100">
+			<p class="StudiesContainer-Item-p">Curso de formación en iniciación a la programación de dispositivos Android (Uvigo 2012)</p>
+		</section>
+		<section class="StudiesContainer-Item-Content__courses">
+			<img src="images/logo-mysql.png" class="StudiesContainer-Item-image" alt="" width="200" height="100">
+			<p class="StudiesContainer-Item-p">Curso de formación en administrador y desarrollador de bases de datos (Uvigo 2013)</p>
+		</section>
+		<section class="StudiesContainer-Item-Content__courses github_logo">
+			<img src="images/logo-git.png" class="StudiesContainer-Item-image" alt="" width="100" height="100">
+			<img src="images/logo-github.png" class="StudiesContainer-Item-image" alt="" width="100" height="100">
+			<p class="StudiesContainer-Item-p">Curso profesional de Git y Github (Cursos Platzi 2015)</p>
+		</section>
+		<section class="StudiesContainer-Item-Content__courses">
+			<img src="images/logo-frontend.png" class="StudiesContainer-Item-image" alt="" width="190" height="100">
+			<p class="StudiesContainer-Item-p">Carrera Front-end (sin examen de certificación)</p>
+		</section> 		
 	</div>
 	<div class="StudiesContainer-Item-Footer">
 		<button type="button" class="StudiesContainer-ButtonDown" data-button="courses"><span class="icon-circle-down" id="coursesSpan"></span></button>
@@ -29,7 +49,22 @@
 </section>
 <section class="StudieContainer-Item">
 	<h2 class="StudiesContainer-Item-Header">Idiomas</h2>
-	<div class="StudiesContainer-Item-Content StudiesContainer-Item-Content__noActive" id="languages">Hola</div>
+	<div class="StudiesContainer-Item-Content__noActive" id="languages">
+		<section class="StudiesContainer-Item-Content__languages">
+		<img src="images/bandera-gb.png" class="StudiesContainer-Item-image" alt="" width="200" height="100">
+		<p class="StudiesContainer-Item-p">Inglés B1 (EOI Vigo 2014)</p>
+		<p class="StudiesContainer-Item-p">Inglés Avanzado 1 (EOI Santiago 2015)</p>
+		</section>
+		<section class="StudiesContainer-Item-Content__languages">
+			<img src="images/bandera-gz.png" class="StudiesContainer-Item-image" alt="" width="200" height="100">
+			<p class="StudiesContainer-Item-p">Gallego (Nativo)</p>
+		</section>
+		<section class="StudiesContainer-Item-Content__languages">
+			<img src="images/bandera-es.png" class="StudiesContainer-Item-image" alt="" width="200" height="100">
+			<p class="StudiesContainer-Item-p">Castellano (Nativo)</p>
+		</section> 
+	</div>
+
 	<div class="StudiesContainer-Item-Footer">
 		<button type="button" class="StudiesContainer-ButtonDown" data-button="languages"><span class="icon-circle-down" id="languagesSpan"></span></button>
 	</div>
