--- a/styles/style.css
+++ b/styles/style.css
@@ -292,6 +292,7 @@ h2{
 
 .StudiesContainer-Item{
 	height: 100%;
+	width: 100%;
 	flex:1;
 }
 
@@ -301,19 +302,63 @@ h2{
 }
 
 .StudiesContainer-Item-Content__active{
+	display: -webkit-box;
+  	display: -moz-box;
+  	display: -ms-flexbox;
+  	display: -webkit-flex;
 	display:flex;
-	margin: 2em;
+	flex-flow: row wrap;
+	justify-content:space-around;
+	max-height: 1000px;
+	opacity:1;
+	overflow:hidden;
+	-webkit-transition: max-height 1s ease, opacity 1s ease;
+	-moz-transition: max-height 1s ease, opacity 1s ease;
+	-ms-transition: max-height 1s ease, opacity 1s ease;
+	-o-transition: max-height 1s ease, opacity 1s ease;
+	transition: max-height 1s ease, opacity 1s ease;	
 }
 
-.StudiesContainer-Item-Content{
+.StudiesContainer-Item-Content__noActive{
+	max-height: 0;
+	opacity: 0;
+	overflow: hidden;
+    -webkit-transition: max-height 1s ease, opacity 1s ease;
+	-moz-transition: max-height 1s ease, opacity 1s ease;
+	-ms-transition: max-height 1s ease, opacity 1s ease;
+	-o-transition: max-height 1s ease, opacity 1s ease;
+	transition: max-height 1s ease, opacity 1s ease;
+    display: -webkit-box;
+  	display: -moz-box;
+ 	display: -ms-flexbox;
+  	display: -webkit-flex;
+    display:flex;
+    flex-flow: row wrap;
+	justify-content:space-around;
+}
+
+.StudiesContainer-Item-Content__degrees{
 	flex:1;
 	margin-left: 3em;
 	margin-right: 3em;
-	margin-top: 0;
-	margin-bottom: 1em;
-	height: 20%;
-	width: 25%;
+	margin-top: 2em;
+	margin-bottom: 2em;
 	text-align: center;
+}
+
+.StudiesContainer-Item-Content__courses{
+	width: 25%;
+	margin:2em;
+	text-align: center;
+}
+
+.StudiesContainer-Item-Content__languages{
+	width: 25%;
+	margin:2em;
+	text-align: center;
+}
+.github_logo{
+	width:40%;
 }
 
 .StudiesContainer-Item-p{
@@ -324,9 +369,6 @@ h2{
 	margin: 1em;
 }
 
-.StudiesContainer-Item-Content__noActive{
-	display:none;
-}
 .StudiesContainer-Item-Footer{
 	border-bottom: dotted #A4BEDE .5em;
 	width: 100%;
