Commit 10. Imagenes y distribucion añadidas a la página de estudio autonomo.

--- a/templates/me.html
+++ b/templates/me.html
@@ -21,7 +21,7 @@
 
 	<section class="MeContainer-Info">
 		<div class="MeContainer-Info-Image">
-			<img src="images/foto.jpg" alt="" class="MeContainer-Info-ImageContainer" height="230" width="230">	
+			<img src="images/foto.png" alt="" class="MeContainer-Info-ImageContainer" height="230" width="230">	
 		</div>
 		<div class="MeContainer-Info-Data">
 			<p>Nombre y apellidos</p>
