--- a/templates/studies/degrees.html
+++ b/templates/studies/degrees.html
@@ -1,5 +1,5 @@
 <section class="StudieContainer-Item">
-	<h2 class="StudiesContainer-Item-Header">Titulaciones</h2>
+	<h3 class="StudiesContainer-Item-Header">Titulaciones</h3>
 	<div class="StudiesContainer-Item-Content__noActive" id="degrees">
 		<section class="StudiesContainer-Item-Content__degrees">
 			<img src="images/logo-uvigo.png" class="StudiesContainer-Item-image" alt="" width="100" height="100">
@@ -15,22 +15,22 @@
 		
 	</div>
 	<div class="StudiesContainer-Item-Footer">
-		<button type="button" class="StudiesContainer-ButtonDown " data-button="degrees"><span class="icon-circle-down" id="degreesSpan"></span></button>
+		<button type="button" class="StudiesContainer-ButtonDown" data-button="degrees"><span class="icon-circle-down" id="degreesSpan"></span></button>
 	</div>
 </section>
 <section class="StudieContainer-Item">
-	<h2 class="StudiesContainer-Item-Header">Cursos</h2>
+	<h3 class="StudiesContainer-Item-Header">Cursos</h3>
 	<div class="StudiesContainer-Item-Content__noActive" id="courses">
 		<section class="StudiesContainer-Item-Content__courses">
 			<img src="images/logo-java.png" class="StudiesContainer-Item-image" alt="" width="75" height="100">
 			<p class="StudiesContainer-Item-p">Curso de formación en Java: Programación orientada a objetos para ingenieros (Uvigo 2012)</p>
 		</section>
 		<section class="StudiesContainer-Item-Content__courses">
-			<img src="images/logo-android.png" class="StudiesContainer-Item-image" alt="" width="175" height="100">
+			<img src="images/logo-android.png" class="StudiesContainer-Item-image" alt="" width="133" height="100">
 			<p class="StudiesContainer-Item-p">Curso de formación en iniciación a la programación de dispositivos Android (Uvigo 2012)</p>
 		</section>
 		<section class="StudiesContainer-Item-Content__courses">
-			<img src="images/logo-mysql.png" class="StudiesContainer-Item-image" alt="" width="200" height="100">
+			<img src="images/logo-sql.png" class="StudiesContainer-Item-image" alt="" width="100" height="100">
 			<p class="StudiesContainer-Item-p">Curso de formación en administrador y desarrollador de bases de datos (Uvigo 2013)</p>
 		</section>
 		<section class="StudiesContainer-Item-Content__courses github_logo">
@@ -48,19 +48,19 @@
 	</div>
 </section>
 <section class="StudieContainer-Item">
-	<h2 class="StudiesContainer-Item-Header">Idiomas</h2>
+	<h3 class="StudiesContainer-Item-Header">Idiomas</h3>
 	<div class="StudiesContainer-Item-Content__noActive" id="languages">
 		<section class="StudiesContainer-Item-Content__languages">
-		<img src="images/bandera-gb.png" class="StudiesContainer-Item-image" alt="" width="200" height="100">
+		<img src="images/bandera-gb.png" class="StudiesContainer-Item-image" alt="" width="150" height="100">
 		<p class="StudiesContainer-Item-p">Inglés B1 (EOI Vigo 2014)</p>
 		<p class="StudiesContainer-Item-p">Inglés Avanzado 1 (EOI Santiago 2015)</p>
 		</section>
 		<section class="StudiesContainer-Item-Content__languages">
-			<img src="images/bandera-gz.png" class="StudiesContainer-Item-image" alt="" width="200" height="100">
+			<img src="images/bandera-gz.png" class="StudiesContainer-Item-image" alt="" width="150" height="100">
 			<p class="StudiesContainer-Item-p">Gallego (Nativo)</p>
 		</section>
 		<section class="StudiesContainer-Item-Content__languages">
-			<img src="images/bandera-es.png" class="StudiesContainer-Item-image" alt="" width="200" height="100">
+			<img src="images/bandera-es.png" class="StudiesContainer-Item-image" alt="" width="150" height="100">
 			<p class="StudiesContainer-Item-p">Castellano (Nativo)</p>
 		</section> 
 	</div>
