--- a/templates/studies/self-study.html
+++ b/templates/studies/self-study.html
@@ -1,1 +1,82 @@
-<h1>Aprendizaje autónomo</h1>
+<section class="StudieContainer-Item">
+	<h3 class="StudiesContainer-Item-Header">Servidor</h3>
+	<div class="StudiesContainer-Item-Content__noActive" id="backend">
+		<div class="StudiesContainer-Item-logoStudy">
+			<div class="StudiesContainer-Item-logoStudy-Container1">
+				<img src="images/logo-node.png" alt="" class="StudiesContainer-Item-logoStudy-image" width="150" height="50">
+				<img src="images/logo-socketio.png" alt="" class="StudiesContainer-Item-logoStudy-image" width="150" height="75">
+			</div>
+			<img src="images/logo-php.png" alt="" class="StudiesContainer-Item-logoStudy-image" width="150" height="80">
+			<img src="images/logo-symfony.png" alt="" class="StudiesContainer-Item-logoStudy-image" width="150" height="51">
+		</div>
+		<div class="StudiesContainer-Item-pStudy">
+			<p>Mis conocimientos en <i>back-end</i> se dividen en el entorno de programación Node.js y el lenguaje PHP. Ambos sistemas difieren entre si en muchos aspectos con ventajas para cada uno de ellos.</p>
+			<p>El primer lenguaje que aprendí ha sido Node.js. Se trata de un entorno de programación basado en JavaScript en el lado del servidor, que provoca que todo el código desarrollado sea asíncrono. La gran ventaja de esto es su bajo consumo de memoria y su rapidez de ejecución con lo que se obtiene un gran rendimiento en entornos de estrés.</p>
+			<p>El asincronismo de Node.js junto con la API Socket.IO facilitan de manera considerable el desarrollo de aplicaciones en tiempo real.
+		</div>
+	</div>
+	<div class="StudiesContainer-Item-Footer">
+		<button type="button" class="StudiesContainer-ButtonDown" data-button="backend"><span class="icon-circle-down" id="backendSpan"></span></button>
+	</div>
+</section>
+
+<section class="StudieContainer-Item">
+	<h3 class="StudiesContainer-Item-Header">Bases de datos</h3>
+	<div class="StudiesContainer-Item-Content__noActive" id="BBDD">
+		<div class="StudiesContainer-Item-logoStudy">
+			<div class="StudiesContainer-Item-logoStudy-Container1">
+				<img src="images/logo-mongo.png" alt="" class="StudiesContainer-Item-logoStudy-image" width="150" height="45">
+			</div>
+			<img src="images/logo-mysql.png" alt="" class="StudiesContainer-Item-logoStudy-image" width="150" height="79">
+		</div>
+		<div class="StudiesContainer-Item-pStudy">Hola</div>		
+	</div>
+	<div class="StudiesContainer-Item-Footer">
+		<button type="button" class="StudiesContainer-ButtonDown" data-button="BBDD"><span class="icon-circle-down" id="BBDDSpan"></span></button>
+	</div>
+</section>
+
+<section class="StudieContainer-Item">
+	<h3 class="StudiesContainer-Item-Header"><i>Front-end</i></h3>
+	<div class="StudiesContainer-Item-Content__noActive" id="frontend">
+		<div class="StudiesContainer-Item-logoStudy">
+			<div class="StudiesContainer-Item-logoStudy-Container1">
+				<img src="images/logo-jquery.png" alt="" class="StudiesContainer-Item-logoStudy-image" width="150" height="79">
+			</div>
+			<img src="images/logo-bootstrap.png" alt="" class="StudiesContainer-Item-logoStudy-image" width="150" height="150">
+		</div>
+		<div class="StudiesContainer-Item-pStudy">Hola</div>		
+	</div>
+	<div class="StudiesContainer-Item-Footer">
+		<button type="button" class="StudiesContainer-ButtonDown" data-button="frontend"><span class="icon-circle-down" id="frontendSpan"></span></button>
+	</div>
+</section>
+
+<section class="StudieContainer-Item">
+	<h3 class="StudiesContainer-Item-Header">Smartphone</h3>
+	<div class="StudiesContainer-Item-Content__noActive" id="phone">
+		<div class="StudiesContainer-Item-logoStudy">
+			<img src="images/logo-cordova.png" alt="" class="StudiesContainer-Item-logoStudy-image" width="250" height="115">
+		</div>
+		<div class="StudiesContainer-Item-pStudy">Hola</div>		
+	</div>
+	<div class="StudiesContainer-Item-Footer">
+		<button type="button" class="StudiesContainer-ButtonDown" data-button="phone"><span class="icon-circle-down" id="phoneSpan"></span></button>
+	</div>
+</section>
+
+<section class="StudieContainer-Item">
+	<h3 class="StudiesContainer-Item-Header">Seguridad</h3>
+	<div class="StudiesContainer-Item-Content__noActive" id="security">
+		<div class="StudiesContainer-Item-logoStudy">
+			<img src="images/logo-kali.png" alt="" class="StudiesContainer-Item-logoStudy-image" width="200" height="100">
+		</div>
+		<div class="StudiesContainer-Item-pStudy">Hola</div>
+	</div>
+
+	<div class="StudiesContainer-Item-Footer">
+		<button type="button" class="StudiesContainer-ButtonDown" data-button="security"><span class="icon-circle-down" id="securitySpan"></span></button>
+	</div>
+</section>
+
+<script src="js/studies-selfstudy.js"></script>
