--- a/styles/style.css
+++ b/styles/style.css
@@ -87,7 +87,6 @@ h2{
 	top:5%;
 	right: 5%;
 	min-height: 90%;
-	/*background: #FF9C00;*/
 	background: white;
 	-webkit-border-radius: 0 15px 15px 0;
 	-moz-border-radius: 0 15px 15px 0;
@@ -133,7 +132,7 @@ h2{
 	border:none;
 	height: 2em;
 	width: 2em;
-	background: white;
+	background: none;
 	padding: .5em;
 	margin-right: 1em;
 	margin-left: 1em;
@@ -197,8 +196,8 @@ h2{
 	font-size: 1em;
 	border-style: solid;
 	border-color: #A4BEDE;
-	border-width: .5em;
-	background: white;
+	border-width: .71em;
+	background: none;
 	color:black;
 	padding: 1.5em 2.5em;
 	margin:0;
@@ -280,24 +279,24 @@ h2{
 
 .StudiesContainer-Content{
 	color:black;
-	margin:15% 5% 5% 5%;
-	display: -webkit-box;
+	margin:19% 5% 5% 5%;
+	/*display: -webkit-box;
 	display: -moz-box;
 	display: -ms-flexbox;
 	display: -webkit-flex;
 	display:flex;
-	flex-direction:column;
+	flex-direction:column;*/
 	
 }
 
 .StudiesContainer-Item{
 	height: 100%;
 	width: 100%;
-	flex:1;
+	/*flex:1;*/
 }
 
 .StudiesContainer-Item-Header{
-	margin-top: 1em;
+	margin-top: 1.5em;
 	margin-bottom: 0;
 }
 
@@ -337,6 +336,19 @@ h2{
 	justify-content:space-around;
 }
 
+.StudiesContainer-Item-Footer{
+	border-bottom: dotted #A4BEDE .5em;
+	width: 100%;
+}
+
+.StudiesContainer-ButtonDown{
+	margin-left:95%;
+	border: none;
+	background: none;
+	font-size: 1.5em;
+}
+
+/*Degrees pages*/
 .StudiesContainer-Item-Content__degrees{
 	flex:1;
 	margin-left: 3em;
@@ -357,6 +369,7 @@ h2{
 	margin:2em;
 	text-align: center;
 }
+
 .github_logo{
 	width:40%;
 }
@@ -369,17 +382,32 @@ h2{
 	margin: 1em;
 }
 
-.StudiesContainer-Item-Footer{
-	border-bottom: dotted #A4BEDE .5em;
-	width: 100%;
+/*Self-study page*/
+.StudiesContainer-Item-logoStudy{
+	vertical-align: middle;
+	width: 35%;
+	margin-top: 2em;
+	overflow: hidden;
+	background: none;
+	text-align: center;
 }
 
-.StudiesContainer-ButtonDown{
-	margin-left:95%;
-	border: none;
-	background: none;
-	font-size: 2em;
+.StudiesContainer-Item-logoStudy-Container1{
+	margin-bottom: 4em;
 }
+
+.StudiesContainer-Item-logoStudy-image{
+	margin:0 4em 1em 4em;
+}
+
+.StudiesContainer-Item-pStudy{
+	margin-top: 2em;
+	width: 65%;
+	background: none;
+	text-align: justify;
+}
+
+
 /*CSS Portfolio Page*/
 .PortfolioContainer{
 	display:inline-block;
